k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/lab-python-server-default: "true"
        io.kompose.service: api
    spec:
      containers:
        - args:
            - uvicorn
            - $(){PROJ_NAME}.api:app
            - --host=0.0.0.0
            - --port=80
            - --reload
          image: api
          name: ${proj-name}-api
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /opt/${PROJ_NAME}
              name: api-claim0
            - mountPath: /opt/tests
              name: api-claim1
      restartPolicy: Always
      volumes:
        - name: api-claim0
          persistentVolumeClaim:
            claimName: api-claim0
        - name: api-claim1
          persistentVolumeClaim:
            claimName: api-claim1
status: {}
