k8s/createbuckets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: createbuckets
  name: createbuckets
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: createbuckets
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/lab-python-server-default: "true"
        io.kompose.service: createbuckets
    spec:
      containers:
        - command:
            - /bin/sh
            - -c
            - ' /usr/bin/mc config host add $$S3_BUCKET_NAME http://minio:9000 $$MINIO_ROOT_USER $$MINIO_ROOT_PASSWORD; /usr/bin/mc mb -p $$S3_BUCKET_NAME/$$S3_BUCKET_NAME; /usr/bin/mc policy set download $$S3_BUCKET_NAME/$$S3_BUCKET_NAME; exit 0; '
          image: minio/mc
          name: ${proj-name}-createbuckets
          resources: {}
      restartPolicy: Always
status: {}
