k8s/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: scheduler
  name: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: scheduler
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/lab-python-server-default: "true"
        io.kompose.service: scheduler
    spec:
      containers:
        - args:
            - taskiq
            - scheduler
            - $(){PROJ_NAME}.broker:scheduler
          image: scheduler
          name: ${proj-name}-scheduler
          resources: {}
          volumeMounts:
            - mountPath: /opt/${PROJ_NAME}
              name: scheduler-claim0
      restartPolicy: Always
      volumes:
        - name: scheduler-claim0
          persistentVolumeClaim:
            claimName: scheduler-claim0
status: {}
