k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/lab-python-server-default: "true"
        io.kompose.service: worker
    spec:
      containers:
        - args:
            - taskiq
            - worker
            - --reload
            - $(){PROJ_NAME}.broker:broker
          image: worker
          name: ${proj-name}-worker
          resources: {}
          volumeMounts:
            - mountPath: /opt/${PROJ_NAME}
              name: worker-claim0
      restartPolicy: Always
      volumes:
        - name: worker-claim0
          persistentVolumeClaim:
            claimName: worker-claim0
status: {}
